Organizando y Completando unidad 8 | DB

--- a/4º Año/Bases de Datos/Unidad 8/3. Organizacion por Asociacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/3. Organizacion por Asociacion.md
@@ -1,5 +1,7 @@
-Como ya hemos mencionado anteriormente existen dos tipos de archivos, los secuenciales que poseen todos sus valore ordenados y los asociativos en los cuales los datos poseen una distribución uniforme en un conjunto de cajones, el valor asociado a cada cajón está determinado por una función de asociación.
-Los archivos secuenciales tienen el inconveniente de que hay que acceder a una estructura de índices para localizar los datos y, por ende se realizan más operaciones de E/S. Mientras que la organización de archivos basada en la técnica de asociación permite evitar el acceso a la estructura de índice, ya que la asociación proporciona una forma de construir índices.
+## Archivos Asociativos
+
+Como ya hemos mencionado anteriormente existen dos tipos de archivos, los secuenciales que poseen todos sus valore ordenados y los asociativos en los cuales los datos poseen una distribución uniforme en un conjunto de cajones. En los archivos asociativos el valor asociado a cada cajón está determinado por una función de asociación.
+Los archivos secuenciales tienen el inconveniente de que hay que acceder a una estructura de índices para localizar los datos y, por ende se realizan más operaciones de E/S. Mientras que la organización de archivos basada en la técnica de asociación permite evitar el acceso a la estructura de índice, ya que la asociación proporciona, de forma indirecta, una forma de construir índices.
 En una organización de archivos por asociación se obtiene la dirección del bloque de disco que contiene el registro deseado mediante el cálculo directo de una función sobre el valor de la clave de búsqueda del registro. Se utiliza el término cajón para indicar una unidad de almacenamiento que puede guardar uno o más registros.
 
 >[!tldr] Definición formal de la Organización por Asociación
@@ -7,9 +9,10 @@ En una organización de archivos por asociación se obtiene la dirección del bl
 >
 >![[descfinicion-formal-asociacion.png]]
 
-Sea $h$ una función asociación, para insertar un registro con clave de búsqueda $K_i$, calcularemos $h(K_i)$, lo que proporciona la dirección del cajón para ese registro. Para realizar una búsqueda con el valor $K_i$ de la clave de búsqueda, simplemente se calcula $h(K_i)$ y luego se busca el cajón con esa dirección. Supongamos que dos claves de búsqueda, $K_5$ y $K_7$, tienen el mismo valor de asociación, es decir, $h(K_5) = h(K_7)$. Si se realiza una búsqueda en $K_5$, el cajón $h(K_5)$ contendrá registros con valores de la clave de búsqueda $K_5$ y registros con valores de la clave de búsqueda $K_7$. Por esta razón hay que comprobar el valor de clave de búsqueda de cada registro en el cajón para verificar que el registro es el que queremos, el procedimiento es muy similar para el proceso de borrado y actualización de datos.
+Sea $h$ una función de asociación, para insertar un registro con clave de búsqueda $K_i$, calcularemos $h(K_i)$, lo que proporciona la dirección del cajón para ese registro. Para realizar una búsqueda con el valor $K_i$ de la clave de búsqueda, simplemente se calcula $h(K_i)$ y luego se busca el cajón con esa dirección. 
+Supongamos que dos claves de búsqueda, $K_5$ y $K_7$, tienen el mismo valor de asociación, es decir, $h(K_5) = h(K_7)$. Si se realiza una búsqueda en $K_5$, el cajón $h(K_5)$ contendrá registros con valores de la clave de búsqueda $K_5$ y $K_7$. Por esta razón hay que comprobar el valor de clave de búsqueda de cada registro en el cajón para verificar que el registro es el que queremos, el procedimiento es muy similar para el proceso de borrado y actualización de datos.
 
-## Funciones de Asociación
+### Funciones de Asociación
 
 Una función de asociación ideal distribuye las claves almacenadas uniformemente a través de los cajones para que cada uno de ellos tenga el mismo número de registros. Es por eso que se debe elegir una función de asociación que asigne los valores de las claves de búsqueda a los cajones de manera que se cumpla lo siguiente:
 
@@ -17,13 +20,13 @@ Una función de asociación ideal distribuye las claves almacenadas uniformement
 2. **Distribución aleatoria**. En el caso promedio, cada cajón tendrá casi la misma cantidad de valores asignados a él, sin tener en cuenta la distribución real de los valores de la clave de búsqueda.
 
 Como una ilustración de estos principios, vamos a escoger una función de asociación para el archivo cuenta utilizando la clave de búsqueda *nombre-sucursal*. Supóngase que se decide tener 26 cajones y se define una función de asociación que asigna a los nombres que empiezan con la letra i-ésima del alfabeto el i-ésimo cajón. Esta función de asociación es simple, pero no logra proporcionar una distribución uniforme, ya que se espera, por ejemplo, tener más nombres de sucursales que comienzan con letras como ***B*** y ***R*** que con ***Q*** y ***X***.
-Se quiere una función de asociación en la clave de búsqueda *saldo*. Se tiene un rango de valores y una función de asociación que divide el valor en 10 rangos. La distribución de los valores de la clave de búsqueda es uniforme, debido a que cada cajón va a tener aproximadamente el mismo número de valores del saldo diferente, pero no es aleatorio lo que genera que los registros con saldos más comunes se concentren en uno o algunos de los cajones haciendo que la distribución no sea uniforme.
-Asegurar la aleatoriedad en la función de asociación es fundamental, debido a que incluso si hubiera estas correlaciones en las claves de búsqueda, la aleatoriedad de la distribución hará que todos los cajones tengan más o menos la misma cantidad de registros, siempre que cada clave de búsqueda aparezca sólo en una pequeña fracción de registros.
+Algo similar sucede si se quiere crear una función de asociación para la clave de búsqueda *saldo*. Se tiene un rango de valores y una función de asociación que divide el valor en 10 rangos. La distribución de los valores de la clave de búsqueda es uniforme, debido a que cada cajón va a tener aproximadamente el mismo número de valores del saldo diferente, pero no es aleatorio lo que genera que los registros con saldos más comunes se concentren en uno o algunos de los cajones haciendo que la distribución no sea uniforme.
+Asegurar la aleatoriedad en la función de asociación es fundamental, debido a que incluso si hubiera estas correlaciones en las claves de búsqueda, la aleatoriedad de la distribución hará que todos los cajones tengan más o menos la misma cantidad de registros, siempre que cada clave de búsqueda aparezca solo en una pequeña fracción de registros.
 
 >[!tldr] Importancia de una una Buena Función de Asociación
 >Una mala función de asociación podría provocar que una búsqueda tome un tiempo proporcional al número de claves de búsqueda en el archivo. Una función bien diseñada en un caso medio de búsqueda toma un tiempo constante, independiente de la cantidad de claves de búsqueda en el archivo.
 
-## Gestión de Desbordamientos de Cajones
+### Gestión de Desbordamientos de Cajones
 
 No siempre cuando se inserta un registro, el cajón al que se asigna va a tener espacio para almacenarlo. Si el cajón no tiene suficiente espacio, ocurre un ***desbordamiento de cajones***, estos desbordamientos son causados principalmente por dos motivos:
 
@@ -35,24 +38,16 @@ No siempre cuando se inserta un registro, el cajón al que se asigna va a tener 
 Para reducir la probabilidad de desbordamiento de cajones, se escoge el número de cajones mediante la siguiente ecuación:
 
 $$\frac{n_r}{f_r}\times(1 + d)$$
-Donde $d$ es un factor normalmente con un valor cercano a $0,2$. Aun con la asignación de unos pocos más de cajones de los requeridos, el desbordamiento de cajones todavía puede suceder. En estos casos se utiliza ***cajones de desbordamiento***, en los cuales si un registro se tiene que insertar en un cajón $c$ y $c$ está ya lleno, se proporcionará un cajón de desbordamiento para $c$ y el registro se insertará en el cajón de desbordamiento. Si el cajón de desbordamiento está también lleno, se proporcionará otro cajón de desbordamiento, y así sucesivamente, generando una lista enlazada denominada ***cadena de desbordamiento***.
+
+Donde $d$ es un factor normalmente con un valor cercano a $0,2$. Aun con la asignación de unos pocos más de cajones de los requeridos, el desbordamiento de cajones todavía puede suceder. En estos casos se utiliza ***cajones de desbordamiento***, en los cuales si un registro se tiene que insertar en un cajón $c$ y $c$ ya está lleno, se proporcionará un cajón de desbordamiento para $c$ y el registro se insertará en el cajón de desbordamiento. Si el cajón de desbordamiento está también lleno, se proporcionará otro cajón de desbordamiento, y así sucesivamente, generando una lista enlazada denominada ***cadena de desbordamiento***, tal y como se puede apreciar en la imagen.
 
 ![[cadena-desbordamiento.png]]
 
 La forma de la estructura asociativa que se acaba de describir se denomina algunas veces ***asociación cerrada***. Existe otra alternativa llamada asociación abierta, en la cual se fija el conjunto de cajones y no hay cadenas de desbordamiento. Si un cajón está lleno, los registros se insertan en algún otro cajón del conjunto inicial $C$ de cajones. Una política para selección el cajón de destino es utilizar el siguiente cajón que tenga espacio, esta política recibe el nombre de ***ensayo lineal***. Aun así las asociaciones cerradas son las más utilizadas por los sistemas de gestión de bases de datos.
 
-## Índices Asociativos
-
-La asociatividad se puede utilizar no solamente para la organización de archivos sino también para la creación de estructuras de índice. Un índice asociativo organiza las claves de búsqueda y sus punteros asociados, dentro de una estructura de archivo asociativo. Estos índices se construyen de la siguiente manera:
-
-1. Se aplica una función de asociación sobre la clave de búsqueda para identificar un cajón.
-2. Se almacenan la clave y los punteros asociados en el cajón o en los cajones de desbordamiento.
-
-Se usa el término índice asociativo para denotar las estructuras de archivo asociativo, así como los índices secundarios asociativos.
-
 ### Asociación Dinámica
 
-La necesidad de fijar el conjunto $C$ de direcciones de cajón presenta un problema con la técnica de asociación estática, ya que la mayoría de las bases de datos crecen con el tiempo. Si se va a utilizar la asociación estática tenemos tres opciones:
+La necesidad de fijar el conjunto $C$ de direcciones de cajón presenta un problema, ya que la mayoría de las bases de datos crecen con el tiempo. Si se va a utilizar la asociación estática tenemos tres opciones:
 
 1. Elegir una función de asociación basada en el tamaño actual del archivo.
 2. Elegir una función de asociación basada en el tamaño previsto del archivo con relación a un punto determinado del futuro.
@@ -62,24 +57,34 @@ Algunas técnicas de ***asociación dinámica*** permiten modificar la función 
 Una forma de asociación dinámica es la ***asociación extensible***, la cual hace frente a los cambios del tamaño de la base de datos dividiendo y fusionando los cajones a medida que esta aumenta o disminuye. Como resultado se conserva eficazmente el espacio. Por otra parte, como la reorganización se realiza sobre un cajón a la vez, la degradación del rendimiento es aceptablemente baja.
 Con la asociación extensible se elige una función de asociación $h$ con las propiedades deseadas de uniformidad y aleatoriedad. Sin embargo, esta función de asociación genera valores dentro de un rango relativamente amplio, llamado, enteros binarios de $b$ bits. Inicialmente, no se utiliza el total de $b$ bits del valor de la función de asociación, para hacer redirigir el valor a su cajón correspondiente. En cualquier caso, empleamos $i$ bits, donde $0 < i < b$. Estos $i$ bits son utilizados como desplazamiento en la ***tabla de direcciones de cajones (TDC)*** la cual contiene un puntero a cada uno de los cajones con los índices. El valor de $i$ aumenta o disminuye de acuerdo a la cantidad de cajones que existan en ese momento, ya que para hacer frente al crecimiento de la base de datos se crean y eliminan cajones bajo demanda, de acuerdo a la cantidad de registros que existan.
 
-#### Consulta y Actualización
+#### Consulta e Inserciones de Datos
 
-Para localizar el cajón que contiene el valor de la clave de búsqueda $K_l$, se toman los primeros $i$ bits más significativos de $h(K_l)$, se busca la entrada de la tabla que corresponda a esta cadena de bits, y se sigue el puntero del cajón en la entrada de la tabla. En caso de que se desee insertar un registro con un valor de la clave de búsqueda $K_l$ se sigue el mismo procedimiento de búsqueda que antes, llegando a algún cajón $j$. Si hay lugar en el cajón se inserta el registro en el cajón, en caso contrario se debe dividir el cajón y redistribuir los registros actuales más uno nuevo. Para dividir el cajón, primero hay que determinar el valor de la función de asociación por si fuera necesario incrementar el número de bits que se están usando.
-Si $i=i_j$​, significa que solo hay una entrada en la TDC que apunta al cajón $j$. En este caso, se necesita incrementar el tamaño de la entrada en la TDC para incluir los punteros a los dos cajones resultantes de la división del cajón $j$, para lograr eso se incrementa el valor de $i$ en uno. Este incremento duplica el tamaño de la entrada en la TDC. Cada entrada se sustituye por dos entradas, y cada una de estas nuevas entradas contiene el mismo puntero que la entrada original. De esta manera, ahora hay dos entradas en la TDC que apuntan al cajón $j$. A continuación, se asigna un nuevo cajón $z$ y se actualiza la segunda entrada para que apunte al nuevo cajón $z$. Tanto $i_j$​ como $i_z​$ se ajustan para igualar el nuevo valor de $i$. Luego, se recalcula la función de asociación para cada registro del cajón $j$. Dependiendo de los primeros $i$ bits del valor de la función de asociación, los registros se mantienen en el cajón $j$ o se reubican en el nuevo cajón $z$. Después de esta redistribución, se vuelve a intentar la inserción del nuevo registro. Normalmente, este intento tiene éxito. Sin embargo, si todos los registros del cajón $j$, así como el nuevo registro, tienen el mismo prefijo del valor de la función de asociación, será necesario dividir el cajón de nuevo, ya que todos los registros en el cajón $j$ y el nuevo registro se asignan al mismo cajón.
+Para localizar el cajón que contiene el valor de la clave de búsqueda $K_l$, se toman los primeros $i$ bits más significativos de $h(K_l)$, se busca la entrada de la tabla que corresponda a esta cadena de bits, y se sigue el puntero del cajón en la entrada de la tabla. En caso de que se desee insertar un registro con un valor de la clave de búsqueda $K_l$ se sigue el mismo procedimiento de búsqueda que antes, llegando a algún cajón $j$. 
+A la hora de insertar un nuevo registro en un cajón, si este tiene lugar disponible se inserta el registro, en caso contrario se debe dividir el cajón y redistribuir los registros actuales más el nuevo que se desea insertar. Para dividir el cajón, primero hay que determinar el valor de la función de asociación por si fuera necesario incrementar el número de bits que se están usando, esto nos pone antes dos situaciones:
+
+1. Si $i=i_j$​, significa que solo hay una entrada en la TDC que apunta al cajón $j$. En este caso, se necesita incrementar el tamaño de la entrada en la TDC para incluir los punteros a los dos cajones resultantes de la división del cajón $j$, para lograr esto se sigue los siguientes pasos:
+	1. Se incrementa el valor de $i$ en uno, lo que duplica el número de entradas en la TDC. Cada entrada se sustituye por dos entradas, y cada una de estas nuevas entradas contiene el mismo puntero que la entrada original. De esta manera, ahora hay dos entradas en la TDC que apuntan al cajón $j$.
+	2. Se crea y asigna un nuevo cajón $z$ y se actualiza la segunda entrada de la tabla TDC para que apunte al nuevo cajón $z$. Y se actualizan los valores de $i_j$​ y $i_z​$ con el nuevo valor de $i$.
+	3. Se recalcula la función de asociación para cada registro del cajón $j$ y dependiendo de los primeros $i$ bits del valor de la función de asociación, los registros se mantienen en el cajón $j$ o se reubican en el nuevo cajón $z$.
+	4. Se vuelve a intentar la inserción del nuevo registro, normalmente este intento tiene éxito. Sin embargo, si todos los registros del cajón $j$, así como el nuevo registro, tienen el mismo prefijo, será necesario dividir el cajón de nuevo, ya que todos los registros en el cajón $j$ y el nuevo registro se asignan al mismo cajón.
+
+![[asociacion-dinamica.png]]
 
 >[!tldr] Importancia de la Elección de una Buena Función de Asociación
 >Si la función de asociación se eligió cuidadosamente, es poco probable que una simple inserción provoque que un cajón se divida más de una vez, a menos que haya un gran número de registros con la misma clave de búsqueda. Si todos los registros en el cajón $j$ tienen el mismo valor de la clave de búsqueda, ningún número de divisiones servirá. En estos casos se usan cajones de desbordamiento para almacenar los registros, como en la asociación estática.
 
-Si $i>i_j$​, significa que hay más de una entrada en la TDC que apunta al cajón $j$. Esta situación permite dividir el cajón $j$ sin incrementar el tamaño de la TDC, porque todas las entradas que apuntan al cajón $j$ comparten los mismos prefijos del valor. Para dividir el cajón $j$, se asigna un nuevo cajón $z$ y se ajustan los valores $i_j$​ e $i_z$​ para reflejar la nueva situación. Específicamente, $i_j$​ e $i_z$ se incrementan en uno respecto al valor original de $i_j$, permitiendo usar un bit adicional de la función de asociación para diferenciar mejor los registros. A continuación, se debe ajustar la TDC para reflejar esta división. Las entradas que anteriormente apuntaban al cajón $j$ se redistribuyen de la siguiente manera:
+2. Si $i>i_j$​, significa que hay más de una entrada en la TDC que apunta al cajón $j$, esto permite dividir el cajón $j$ sin incrementar el tamaño de la TDC, porque todas las entradas que apuntan al cajón $j$ comparten los mismos prefijos del valor. Para dividir el cajón $j$, se siguen los siguientes pasos:
+	1. Se asigna un nuevo cajón $z$ y se ajustan los valores $i_j$​ e $i_z$​ para reflejar la nueva situación. Específicamente, $i_j$​ y $i_z$ se incrementan en uno respecto al valor original de $i_j$, permitiendo usar un bit adicional de la función de asociación para diferenciar mejor los registros.
+	2. Se ajustan los punteros de la tabla TDC para reflejar esta división, haciendo que las entradas que anteriormente apuntaban al cajón $j$ se redistribuyen de la siguiente manera:
+		- La primera mitad de las entradas en la TDC permanece apuntando al cajón $j$.
+		- La segunda mitad de las entradas en la TDC se actualiza para apuntar al nuevo cajón $z$.
+	3. Se recalcula la función de asociación para cada registro en el cajón $j$ utilizando los nuevos valores de $i_j$​ e $i_z$​. Esto determinará si los registros permanecen en el cajón $j$ o se trasladan al nuevo cajón $z$.
+	4. Se vuelve a intentar la inserción, en caso de que vuelva a fallar, se aplica uno de los dos casos expuestos, de acuerdo al valor de $i$ e $i_k$.
 
-- La primera mitad de las entradas en la TDC permanece apuntando al cajón $j$.
-- La segunda mitad de las entradas en la TDC se actualiza para apuntar al nuevo cajón $z$.
+#### Eliminación de Datos
 
-Una vez ajustada la TDC, se recalcula la función de asociación para cada registro en el cajón $j$ utilizando los nuevos valores de $i_j$​ e $i_z$​. Esto determinará si los registros permanecen en el cajón $j$ o se trasladan al nuevo cajón $z$. Luego se vuelve a intentar la inserción, en caso de que vuelva a fallar, se aplica uno de los dos casos expuestos anteriormente.
-
-#### Eliminación
-
-En ambas de las situaciones planteadas anteriormente sólo se necesita recalcular la función de asociación en los registros del cajón $j$. Para borrar un registro con valor de la clave de búsqueda $K_i$ se sigue el mismo procedimiento de búsqueda anterior, finalizando en algún cajón correspondiente. A continuación se borran los registros del archivo y la clave de búsqueda del cajón y el cajón en caso de que este esté vacío. Nótese que en este momento, varios cajones se pueden fusionar, reduciendo el tamaño de la TDC a la mitad. No obstante, a diferencia de la fusión de cajones, el cambio de tamaño de la TDC es una operación muy costosa si la tabla es grande. Por tanto, sólo sería aconsejable reducir el tamaño de la TDC si el número de cajones se reduce considerablemente.
+En las dos situaciones planteadas anteriormente solo se necesita recalcular la función de asociación en los registros del cajón $j$. Para borrar un registro con valor de la clave de búsqueda $K_i$ se sigue el mismo procedimiento de búsqueda que se describió con anterioridad, para a continuación borra los registros del archivo, la clave de búsqueda del cajón y el cajón en caso de que este esté vacío. 
+Nótese que en este momento, varios cajones se pueden fusionar, reduciendo el tamaño de la TDC a la mitad. No obstante, a diferencia de la fusión de cajones, el cambio de tamaño de la TDC es una operación muy costosa si la tabla es grande. Por tanto, solo sería aconsejable reducir el tamaño de la TDC si el número de cajones se reduce considerablemente.
 
 >[!tldr] Ventajas y Desventajas de la Asociación Extensible
 >- **Ventajas**:
@@ -89,3 +94,13 @@ En ambas de las situaciones planteadas anteriormente sólo se necesita recalcula
 >	- La búsqueda implica un nivel adicional de indirección, ya que se debe acceder a la TDC antes que acceder al propio cajón. Esta referencia extra tiene una repercusión menor en el rendimiento.
 >
 >Aunque las estructuras asociativas que se discutieron con anterioridad no tienen este nivel extra de indirección, pierden su leve ventaja en el rendimiento cuando se llenan.
+
+## Índices Asociativos
+
+La asociatividad se puede utilizar no solamente para la organización de archivos sino también para la creación de estructuras de índice. Un índice asociativo organiza las claves de búsqueda y sus punteros asociados dentro de una estructura de archivo asociativo. Estos índices se construyen de la siguiente manera:
+
+1. Se aplica una función de asociación sobre la clave de búsqueda para identificar un cajón.
+2. Se almacenan la clave y los punteros asociados en el cajón o en los cajones de desbordamiento.
+
+Se usa el término índice asociativo o índice hash para denotar las estructuras de archivo asociativo, así como los índices secundarios asociativos.
+
