--- a/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
+++ b/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
@@ -3,7 +3,7 @@ Hasta ahora se ha asumido implícitamente que se utiliza solamente un índice o 
 ```sql
 SELECT numero_cuenta 
 	FROM cuenta
-	WHERE nombre_sucursal = “Pamplona” AND saldo = 1000;
+	WHERE nombre_sucursal = 'Pamplona' AND saldo = 1000;
 ```
 
 Hay tres estrategias posibles para procesar esta consulta:
@@ -12,32 +12,42 @@ Hay tres estrategias posibles para procesar esta consulta:
 2. Usar el índice en *saldo* para encontrar todos los registros pertenecientes a cuentas con saldos de 1000 y luego examinar estos registros para ver si `nombre_sucursal = Pamplona`.
 3. Usar el índice en *nombre_sucursal* para encontrar punteros a registros pertenecientes a la sucursal Pamplona y usar el índice en *saldo* para encontrar los punteros a todos los registros pertenecientes a cuentas con saldos de 1.000. Se realiza la intersección de estos dos conjuntos de punteros.
 
-La tercera estrategia es la única de las tres que aprovecha la ventaja de tener varios índices. Aunque incluso esta estrategia podría ser una pobre elección si sucediera lo siguiente:
+La tercera estrategia es la única de las tres que aprovecha la ventaja de tener varios índices. Aunque incluso esta estrategia podría ser una pobre elección si se cumple al menos una de las siguientes condiciones:
 
 - Hay muchos registros pertenecientes a la sucursal Pamplona
 - Hay muchos registros pertenecientes a cuentas con un saldo de 1.000
-- Hay pocos registros pertenecientes a ambos, a la sucursal Pamplona y a las cuentas con un saldo de 1.000.
+- Hay pocos registros pertenecientes a la sucursal Pamplona cuyo saldo de cuenta sea 1.000.
 
-Si estas condiciones ocurrieran, se tendrían que examinar un gran número de punteros para producir un resultado pequeño. Una estrategia más eficiente para este caso es crear y utilizar un índice con una clave de búsqueda compuesta por nombre_sucursal y saldo. La estructura del índice es la misma que para cualquier otro índice, con la única diferencia de que la clave de búsqueda no es un simple atributo sino una lista de atributos, esta clave se puede representar como una tupla de valores, de la forma $(a_1, \cdots, a_n)$, donde los atributos indexados son $A_1, \cdots, A_n$. El orden de los valores de este tipo de claves de búsqueda es el orden lexicográfico. Por ejemplo, para el caso de dos atributos en la clave de busqueda, $(a^1_1, a^2_1) < (a^1_2, a^2_2)$ si $a^1_1 < a^1_2$, o bien $a^1_1 = a^1_2$ y $a^2_1 < a^2_2$. El orden lexicográfico es básicamente el mismo orden alfabético de las palabras.
-El empleo de una estructura de índice ordenado con múltiples atributos tiene algunas deficiencias. Retomemos la consulta anterior dada como ejemplo, allí se podría responder a esta consulta usando un índice ordenado con la clave de búsqueda compuesta con la desventaja que debido a la ordenación de los registros en el archivo, es probable que cada registro esté en un bloque diferente de disco, causando muchas operaciones de E/S. Para acelerar el procesamiento en general de consultas con varias claves de búsqueda se pueden emplear varias
-estructuras especiales, tales como:
+Si estas condiciones ocurrieran, se tendrían que examinar un gran número de punteros para producir un resultado pequeño. Una estrategia más eficiente para este caso es crear y utilizar un índice con una clave de búsqueda compuesta por *nombre_sucursal* y *saldo*. La estructura del índice es la misma que para cualquier otro índice, con la única diferencia de que la clave de búsqueda no es un simple atributo, sino una lista de atributos, esta clave se puede representar como una tupla de valores, de la forma $(a_1, \cdots, a_n)$, donde los atributos indexados son $A_1, \cdots, A_n$. 
 
-- Archivos en retícula (Grid Files)
-- Mapa de Bits
+>[!tldr] Orden de las Claves Múltiples
+>El orden de los valores de este tipo de claves de búsqueda es el orden lexicográfico. Es decir, para el caso de dos atributos en la clave de búsqueda, $(a^1_1, a^2_1) < (a^1_2, a^2_2)$ si $a^1_1 < a^1_2$, o bien $a^1_1 = a^1_2$ y $a^2_1 < a^2_2$. El orden lexicográfico es básicamente el mismo orden alfabético de las palabras.
+
+El empleo de una estructura de índice ordenado con múltiples atributos tiene algunas deficiencias. Tomemos la consulta dada como ejemplo anteriormente, allí se podría responder a esta consulta usando un índice ordenado con claves de búsqueda compuestas con la desventaja que debido a la ordenación de los registros en el archivo, es probable que cada registro esté en un bloque diferente de disco, causando muchas operaciones de E/S.
+Para acelerar el procesamiento en general de consultas con varias claves de búsqueda se pueden emplear varias estructuras especiales, como lo son los ***archivos en retícula (Grid Files)*** o ***los mapas de bits***.
+
+## Archivos Reticulares
 
 Los ***archivos en retícula*** poseen la siguiente estructura:
 
 ![[archivo-reticula.png]]
 
-En los cuales las escalas lineales se deben escoger de tal manera que los registros estén uniformemente distribuidos a través de las celdas. Este tipo de estructuras también es adecuada para consultas que impliquen solo una clave de búsqueda. Si bien los archivos en retícula proporcionan un descenso significativo en el tiempo de procesamiento de consultas multiclave. Implican un gasto adicional de espacio, así como una degradación del rendimiento al insertar y borrar registros, además de ser difícil elegir una división en los rangos de las claves para que la distribución de las claves sea uniforme.
-Por otro lado, los índices de ***mapas de bits*** son un tipo de índices especializado para consultas sencillas sobre varias claves, aunque cada índice de mapas de bits se construya para una única clave. Para usarlos, los registros de la relación deben estar numerados secuencialmente, de este modo dado un número $n$ es fácil recuperar el registro con número $n$. Esto es particularmente fácil de conseguir si los registros tienen un tamaño fijo y están asignados en bloques consecutivos de un archivo. El número de registro se puede traducir fácilmente en un número de bloque y en un número que identifica el registro dentro del bloque. En este contexto un mapa de bits es un array de bits. En su forma más simple, un índice de mapas de bits sobre un atributo $A$ de la relación $r$ consiste en un mapa de bits para cada valor que pueda tomar $A$. Cada mapa de bits tiene tantos bits como el número de registros de la relación. El í-ésimo bit del mapa de bits para el valor $v_j$ se establece en 1 si el registro con número $i$ tiene el valor $v_j$ para el atributo $A$. El resto de bits del mapa de bits se establecen a 0.
-Considérese una relación $r$ con un atributo $A$ que sólo puede tomar un número pequeño de valores. Por ejemplo, la relación *info_cliente* la cual puede tener un campo sexo, que puede tomar sólo los valores ***M*** o ***F***, para este caso se podría tener un mapa de bits para el valor M y otro para F. El i-ésimo bit del mapa de bits para M se establece en 1 si el valor sexo del registro con número $i$ es M, mientras que el resto de bits del mapa de bits se establecen en 0.
-Otro uso importante de los mapas de bits es contar el número de tuplas que satisfacen una selección dada esto resulta importante para el análisis de datos, de este modo la forma de saber la cantidad de tuplas que satisfacen ciertas condiciones es tan simple como hacer la intersección entre mapas de bits. Así se puede obtener el resultado del mapa de bits sin acceder a la relación. Además los índices de mapas de bits son generalmente muy pequeños comparados con el tamaño real de la relación. Los registros tienen generalmente de decenas a centenas de bytes, mientras que un único bit representa a un registro en el mapa de bits.
+En los cuales las escalas lineales se deben escoger de tal manera que los registros estén uniformemente distribuidos a través de las celdas. Este tipo de estructuras también es adecuada para consultas que impliquen solo una clave de búsqueda.
+Si bien los archivos en retícula proporcionan un descenso significativo en el tiempo de procesamiento de consultas multiclave, implican un gasto adicional de espacio, así como una degradación del rendimiento al insertar y borrar registros, además de ser difícil elegir una división en los rangos de las claves para que la distribución de las claves sea uniforme.
 
->[!tldr] Actialización de los Ídices de Mapas de Bits.
->El borrado de registros crea huecos en la secuencia de registros, ya que el desplazamiento de registros o de los números de registro para rellenar los huecos sería excesivamente costoso. Para reconocer los registros borrados se puede almacenar un mapa de bits de existencia en el que el bit $i$ es 0 si el registro $i$ no existe, y 1 en caso contrario.
->La inserción de registros, por su parte, no afecta a la secuencia de numeración de otros registros. Por tanto, se puede insertar tanto añadiendo registros al final del archivo como reemplazando los registros borrados.
+## Mapas de Bits
+
+Los índices de ***mapas de bits*** son un tipo de índices especializado para consultas sencillas sobre varias claves, aunque cada índice de mapas de bits se construya para una única clave. Para usarlos, los registros de la relación deben estar numerados secuencialmente, de este modo dado un número $n$ es fácil recuperar el registro con número $n$. Esto es particularmente fácil de conseguir si los registros tienen un tamaño fijo y están asignados en bloques consecutivos de un archivo.
+El número de registro se puede traducir fácilmente en un número de bloques y en un número que identifica el registro dentro del bloque. En este contexto un mapa de bits no es más que un arreglo de bits. En su forma más simple, un índice de mapas de bits sobre un atributo $A$ de la relación $r$ consiste en un mapa de bits para cada valor que pueda tomar $A$. Cada mapa de bits tiene tantos bits como número de registros tenga la relación. El í-ésimo bit del mapa de bits para el valor $v_j$ se establece en 1 si el registro con número $i$ tiene el valor $v_j$ para el atributo $A$, el resto de bits del mapa de bits se establecen a 0.
+Considérese una relación $r$ con un atributo $A$ que solo puede tomar un número pequeño de valores. Por ejemplo, la relación *info_cliente* la cual puede tener un campo sexo, que puede tomar solo los valores ***M*** o ***F***, para este caso se podría tener un mapa de bits para el valor M y otro para F. El i-ésimo bit del mapa de bits para M se establece en 1 si el valor sexo del registro con número $i$ es M, mientras que el resto de bits del mapa de bits se establecen en 0.
+Los mapas de bits también pueden utilizarse para contar el número de tuplas que satisfacen una selección dada esto resulta importante para el análisis de datos. De este modo la forma de saber la cantidad de tuplas que satisfacen ciertas condiciones es tan simple como hacer la intersección entre ambos mapas de bits, así se puede obtener el resultado del mapa de bits sin acceder a la relación.
 
 >[!note] Implementación Eficiente de las Operaciones de Mapas de Bits
->La intersección entre dos mapas de bits se puede implementar usando un bucle for, donde la iteración i-ésima calcula la conjunción de los i-ésimos bits de los dos mapas. Se puede acelerar considerablemente el cálculo de la intersección usando las instrucciones `and` soportadas por la mayoría de los conjuntos de instrucciones de las computadoras. Tal es la mejora que si una relación tuviese un millón de registros, cada mapa de bits contendría un millón de bits, (128 Kb) para los cuales solo se necesitan 31.250 instrucciones para calcular la intersección de dos mapas de bits para la relación, asumiendo un tamaño de palabra de 32 bits. La unión de mapas de bits es igual que para la intersección, excepto en que se usa la instrucción de bits `or` en lugar de `and`.
+>La intersección entre dos mapas de bits se puede implementar utilizando un bucle, donde la iteración i-ésima calcula la conjunción de los i-ésimos bits de los dos mapas. Se puede acelerar considerablemente el cálculo de la intersección usando las instrucciones `and` soportadas por la mayoría de los conjuntos de instrucciones de las computadoras.
+>Así mismo, la unión de mapas de bits se implementa de la misma manera que la intersección, con la diferencia que en este caso se utiliza la instrucción de bits `or`.
 
+Adicionalmente, los índices de mapas de bits son generalmente muy pequeños comparados con el tamaño real de la relación. Los registros tienen generalmente de decenas a centenas de bytes, mientras que un único bit representa a un registro en el mapa de bits.
+
+>[!tldr] Actualización de los Índices de Mapas de Bits.
+>El borrado de registros crea huecos en la secuencia de registros, como el desplazamiento de los registros o de los números de registro para rellenar los huecos sería excesivamente costoso. Para reconocer los registros borrados se puede almacenar un mapa de bits de existencia en el que el bit $i$ es 0 si el registro $i$ no existe, y 1 en caso contrario.
+>La inserción de registros, por su parte, no afecta a la secuencia de numeración de otros registros. Por tanto, se puede insertar tanto añadiendo registros al final del archivo como reemplazando los registros borrados.
