--- a/4º Año/Comunicaciones y Redes/Unidad 5/7. Tecnologias de Banda Ancha.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/7. Tecnologias de Banda Ancha.md
@@ -1,3 +1,4 @@
+La banda ancha es un término que se refiere a las tecnologías de telecomunicaciones que permiten la transmisión de datos a alta velocidad, facilitando el acceso a Internet y otros servicios digitales. Entre las tecnologías de banda ancha más comunes se encuentran los modems telefónicos y los módems DSL, que utilizan líneas telefónicas para ofrecer acceso a Internet, y LMDS, que emplea frecuencias de microondas para la transmisión inalámbrica de datos.
 
 ## Modems Telefónicos
 
